Changes on list, Content example
- Added class for lists
- Added content example

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<h1>Examples</h1>
 		</div>
 
-		<ul class="ms-boxed">
+		<ul class="ms-list ms-boxed">
 			<li class="ms-active"><b>minstyle.io :</b></li>
 			<li><a href="examples/grid.html">Grid</a></li>
 			<li><a href="examples/button.html">Button</a></li>
@@ -34,6 +34,7 @@
 			<li><a href="examples/progressbar.html">Progress Bar</a></li>
 			<li><a href="examples/card.html">Card</a></li>
 			<li><a href="examples/menu.html">Menu</a></li>
+			<li><a href="examples/content.html">Content</a></li>
 		</ul>
 
 	</div><!-- /container -->
