--- a/examples/grid.html
+++ b/examples/grid.html
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 	<style>
-		.col-s-2{
+		.col-s-2, .col-s-10{
 			background-color: #f2f2f2;
 			color: #434343;
 			height: 40px;
@@ -49,6 +49,17 @@
 <div class="col-s-2">.col-s-2</div>
 <div class="col-s-2">.col-s-2</div>
 <div class="col-s-2">.col-s-2</div></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<div class="col-s-10 col-s-center col-m-4 col-m-center">.col-s-10 .col-s-center .col-m-4 .col-m-center</div>
+			</div>
+
+			<div class="col-s-12">
+				<pre>
+<code class="language-html"><div class="col-s-10 col-s-center col-m-4 col-m-center">.col-s-10 .col-s-center .col-m-4 .col-m-center</div></code></pre>
 			</div>
 		</div>
 
