--- a/examples/list.html
+++ b/examples/list.html
@@ -23,7 +23,7 @@
 
 		<div class="row">
 			<div class="col-s-12">
-				<ul>
+				<ul class="ms-list">
 					<li>Lorem ipsum sit amet !</li>
 					<li>Lorem dolor amet !</li>
 					<li>Lorem ipsum dolor sit amet !</li>
@@ -31,7 +31,7 @@
 			</div>
 
 			<div class="col-s-12">
-					<pre><code class="language-html"><ul>
+					<pre><code class="language-html"><ul class="ms-list">
 	<li>Lorem ipsum sit amet !</li>
 	<li>Lorem dolor amet !</li>
 	<li>Lorem ipsum dolor sit amet !</li>
@@ -41,7 +41,7 @@
 
 		<div class="row">
 			<div class="col-s-12">
-				<ol class="ms-list-none">
+				<ol class="ms-list ms-list-none">
 				  <li>Lorem ipsum sit amet !</li>
 				  <li>Lorem dolor amet !</li>
 				  <li>Lorem ipsum dolor sit amet !</li>
@@ -49,7 +49,7 @@
 			</div>
 
 			<div class="col-s-12">
-					<pre><code class="language-html"><ol class="ms-list-none">
+					<pre><code class="language-html"><ol class="ms-list ms-list-none">
 	<li>Lorem ipsum sit amet !</li>
 	<li>Lorem dolor amet !</li>
 	<li>Lorem ipsum dolor sit amet !</li>
@@ -59,7 +59,7 @@
 
 		<div class="row">
 			<div class="col-s-12">
-				<ol class="ms-border">
+				<ol class="ms-list ms-border">
 				  <li class="active">Lorem ipsum sit amet !</li>
 				  <li>Lorem dolor amet !</li>
 				  <li>Lorem ipsum dolor sit amet !</li>
@@ -67,7 +67,7 @@
 			</div>
 
 			<div class="col-s-12">
-					<pre><code class="language-html"><ol class="ms-border">
+					<pre><code class="language-html"><ol class="ms-list ms-border">
 	<li class="active">Lorem ipsum sit amet !</li>
 	<li>Lorem dolor amet !</li>
 	<li>Lorem ipsum dolor sit amet !</li>
@@ -77,7 +77,7 @@
 
 		<div class="row">
 			<div class="col-s-12">
-				<ul class="ms-boxed">
+				<ul class="ms-list ms-boxed">
 					<li>Lorem ipsum dolor sit amet</li>
 					<li>Lorem dolor amet !</li>
 					<li>Lorem ipsum dolor sit amet !</li>
@@ -85,7 +85,7 @@
 			</div>
 
 			<div class="col-s-12">
-					<pre><code class="language-html"><ul class="ms-boxed">
+					<pre><code class="language-html"><ul class="ms-list ms-boxed">
 	<li>Lorem ipsum dolor sit amet</li>
 	<li>Lorem dolor amet !</li>
 	<li>Lorem ipsum dolor sit amet !</li>
@@ -95,7 +95,7 @@
 
 		<div class="row">
 			<div class="col-s-12">
-				<ul class="ms-boxed">
+				<ul class="ms-list ms-boxed">
 					<li class="ms-active">Lorem ipsum dolor sit amet</li>
 					<li>Lorem dolor amet !</li>
 					<li>Lorem ipsum dolor sit amet !</li>
@@ -103,7 +103,7 @@
 			</div>
 
 			<div class="col-s-12">
-					<pre><code class="language-html"><ul class="ms-boxed">
+					<pre><code class="language-html"><ul class="ms-list ms-boxed">
 	<li class="ms-active">Lorem ipsum dolor sit amet</li>
 	<li>Lorem dolor amet !</li>
 	<li>Lorem ipsum dolor sit amet !</li>
