Added box and some changes
- Added box element
- Added text-align class
- Change heading margin
- Add shadow example in content page

--- a/examples/blockquote.html
+++ b/examples/blockquote.html
@@ -76,7 +76,7 @@
 
 			<div class="col-s-12">
 				<pre><code class="language-html"><blockquote class="ms-blockquote ms-green">
-	<p><em><code>var fruits = ['Apple', 'Banana'];</code></em></p>
+	<p><em><code><b>var</b> fruits = ['Apple', 'Banana'];</code></em></p>
 </blockquote></code></pre>
 			</div>
 		</div>
