--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 	<div class="container">
 		<div class="row" style="margin-bottom: 20px;">
-			<h1>Examples</h1>
+			<h1>minstyle.io</h1>
 		</div>
 
 		<ul class="ms-list ms-boxed">
@@ -35,6 +35,7 @@
 			<li><a href="examples/card.html">Card</a></li>
 			<li><a href="examples/menu.html">Menu</a></li>
 			<li><a href="examples/content.html">Content</a></li>
+			<li><a href="examples/box.html">Box</a></li>
 		</ul>
 
 	</div><!-- /container -->
