--- a/examples/content.html
+++ b/examples/content.html
@@ -21,53 +21,99 @@
 			<h1><a href="../" class="btn"><i class="fas fa-chevron-circle-left"></i></a> Content - Example</h1>
 		</div>
 
-	<div class="row">
+		<div class="row">
 		<div class="col-s-12">
-			<ul class="ms-list ms-list-none">
-				<li>
-					<p class="ms-text-size-1">Text size</p>
-				</li>
-				<li>
-					<p class="ms-text-size-2 ms-text-red">Text size</p>
-				</li>
-				<li>
-					<p class="ms-text-size-3 ms-text-green">Text size</p>
-				</li>
-				<li>
-					<p class="ms-text-size-4 ms-text-blue">Text size</p>
-				</li>
-				<li>
-					<p class="ms-text-size-5">Text size</p>
-				</li>
-				<li>
-					<p class="ms-text-size-6">Text size</p>
-				</li>
-				<li>
-					<p class="ms-text-size-7">Text size</p>
-				</li>
-				<li>
-					<p class="ms-text-size-8">Text size</p>
-				</li>
-				<li>
-					<p class="ms-text-size-9">Text size</p>
-				</li>
-			</ul>
+			<div class="ms-alert ms-clear ms-shadow">
+				<b>Shadow box</b>, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere modi molestias ipsum! Libero magni ullam quam aut repellendus nobis amet cumque odit ea asperiores dignissimos soluta sapiente, blanditiis, quaerat minus.
+			</div>
 		</div>
 
 		<div class="col-s-12">
-					<pre><code class="language-html"><ul class="ms-list ms-list-none">
-	<li><p class="ms-text-size-1">Text size</p></li>
-	<li><p class="ms-text-size-2 ms-text-red">Text size</p></li>
-	<li><p class="ms-text-size-3 ms-text-green">Text size</p></li>
-	<li><p class="ms-text-size-4 ms-text-blue">Text size</p></li>
-	<li><p class="ms-text-size-5">Text size</p></li>
-	<li><p class="ms-text-size-6">Text size</p></li>
-	<li><p class="ms-text-size-7">Text size</p></li>
-	<li><p class="ms-text-size-8">Text size</p></li>
-	<li><p class="ms-text-size-9">Text size</p></li>
-</ul></code></pre>
+					<pre><code class="language-html"><div class="ms-alert ms-clear ms-shadow">
+	<b>Shadow box</b>, Lorem ipsum dolor sit amet, ...
+</div></code></pre>
 		</div>
 	</div>
+
+	<div class="row">
+		<div class="col-s-12">
+			<p class="ms-text-left">Text left</p>
+			<p class="ms-text-center">Text center</p>
+			<p class="ms-text-right">Text right</p>
+		</div>
+
+		<div class="col-s-12">
+					<pre><code class="language-html"><p class="ms-text-left">Text left</p>
+<p class="ms-text-center">Text center</p>
+<p class="ms-text-right">Text right</p></code></pre>
+		</div>
+	</div>
+
+	<div class="row">
+			<div class="col-s-12">
+				<h1 class="ms-fw-200">Heading</h1>
+				<h2 class="ms-fw-300">Heading</h2>
+				<h3 class="ms-fw-400">Heading</h3>
+				<h4 class="ms-fw-600">Heading</h4>
+				<h5 class="ms-fw-900">Heading</h5>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><h1 class="ms-fw-200">Heading</h1>
+<h2 class="ms-fw-300">Heading</h2>
+<h3 class="ms-fw-400">Heading</h3>
+<h4 class="ms-fw-600">Heading</h4>
+<h5 class="ms-fw-900">Heading</h5></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<ul class="ms-list ms-list-none">
+					<li>
+						<p class="ms-text-size-1">Text size</p>
+					</li>
+					<li>
+						<p class="ms-text-size-2 ms-text-red">Text size</p>
+					</li>
+					<li>
+						<p class="ms-text-size-3 ms-text-green">Text size</p>
+					</li>
+					<li>
+						<p class="ms-text-size-4 ms-text-blue">Text size</p>
+					</li>
+					<li>
+						<p class="ms-text-size-5">Text size</p>
+					</li>
+					<li>
+						<p class="ms-text-size-6">Text size</p>
+					</li>
+					<li>
+						<p class="ms-text-size-7">Text size</p>
+					</li>
+					<li>
+						<p class="ms-text-size-8">Text size</p>
+					</li>
+					<li>
+						<p class="ms-text-size-9">Text size</p>
+					</li>
+				</ul>
+			</div>
+
+			<div class="col-s-12">
+						<pre><code class="language-html"><ul class="ms-list ms-list-none">
+		<li><p class="ms-text-size-1">Text size</p></li>
+		<li><p class="ms-text-size-2 ms-text-red">Text size</p></li>
+		<li><p class="ms-text-size-3 ms-text-green">Text size</p></li>
+		<li><p class="ms-text-size-4 ms-text-blue">Text size</p></li>
+		<li><p class="ms-text-size-5">Text size</p></li>
+		<li><p class="ms-text-size-6">Text size</p></li>
+		<li><p class="ms-text-size-7">Text size</p></li>
+		<li><p class="ms-text-size-8">Text size</p></li>
+		<li><p class="ms-text-size-9">Text size</p></li>
+	</ul></code></pre>
+			</div>
+		</div>
 
 	</div><!-- /container -->
 
