--- a/examples/list.html
+++ b/examples/list.html
@@ -60,7 +60,7 @@
 		<div class="row">
 			<div class="col-s-12">
 				<ol class="ms-list ms-border">
-				  <li class="active">Lorem ipsum sit amet !</li>
+				  <li>Lorem ipsum sit amet !</li>
 				  <li>Lorem dolor amet !</li>
 				  <li>Lorem ipsum dolor sit amet !</li>
 				</ol>
@@ -68,7 +68,7 @@
 
 			<div class="col-s-12">
 					<pre><code class="language-html"><ol class="ms-list ms-border">
-	<li class="active">Lorem ipsum sit amet !</li>
+	<li>Lorem ipsum sit amet !</li>
 	<li>Lorem dolor amet !</li>
 	<li>Lorem ipsum dolor sit amet !</li>
 </ol></code></pre>
@@ -96,7 +96,7 @@
 		<div class="row">
 			<div class="col-s-12">
 				<ul class="ms-list ms-boxed">
-					<li class="ms-active">Lorem ipsum dolor sit amet</li>
+					<li>Lorem ipsum dolor sit amet</li>
 					<li>Lorem dolor amet !</li>
 					<li>Lorem ipsum dolor sit amet !</li>
 				</ul>
@@ -104,7 +104,7 @@
 
 			<div class="col-s-12">
 					<pre><code class="language-html"><ul class="ms-list ms-boxed">
-	<li class="ms-active">Lorem ipsum dolor sit amet</li>
+	<li>Lorem ipsum dolor sit amet</li>
 	<li>Lorem dolor amet !</li>
 	<li>Lorem ipsum dolor sit amet !</li>
 </ul></code></pre>
