--- a/examples/badge.html
+++ b/examples/badge.html
@@ -23,6 +23,151 @@
 
 		<div class="row">
 			<div class="col-s-12">
+				<a href="#" class="ms-badge">alpha</a>
+				<span class="ms-badge ms-blue">beta</span>
+				<span class="ms-badge ms-green">release</span>
+				<span class="ms-badge ms-red">bug</span>
+				<span class="ms-badge ms-gradient">minstyle.io</span>
+				<span class="ms-badge ms-white">minstyle.io</span>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><a href="#" class="ms-badge">alpha</a>
+<span class="ms-badge ms-blue">beta</span>
+<span class="ms-badge ms-green">release</span>
+<span class="ms-badge ms-red">bug</span>
+<span class="ms-badge ms-gradient">minstyle.io</span>
+<span class="ms-badge ms-white">minstyle.io</span></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<span class="ms-badge ms-green ms-small"><i class="fas fa-code"></i> Release</span>
+				<span class="ms-badge ms-green"><i class="fas fa-code"></i> Release</span>
+				<span class="ms-badge ms-green ms-large"><i class="fas fa-code"></i> Release</span>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><span class="ms-badge ms-green ms-small"><i class="fas fa-code"></i> Release</span>
+<span class="ms-badge ms-green"><i class="fas fa-code"></i> Release</span>
+<span class="ms-badge ms-green ms-large"><i class="fas fa-code"></i> Release</span></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<span class="ms-badge ms-red"><i class="fas fa-exclamation"></i> Danger</span>
+				<a href="#" class="ms-badge ms-rounded ms-red"><i class="fas fa-exclamation"></i> Danger</a>
+				<span class="ms-badge ms-border ms-red"><i class="fas fa-exclamation"></i> Danger</span>
+				<span class="ms-badge ms-border ms-rounded ms-red"><i class="fas fa-exclamation"></i> Danger</span>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><span class="ms-badge ms-red"><i class="fas fa-exclamation"></i> Danger</span>
+<a href="#" class="ms-badge ms-rounded ms-red"><i class="fas fa-exclamation"></i> Danger</a>
+<span class="ms-badge ms-border ms-red"><i class="fas fa-exclamation"></i> Danger</span>
+<span class="ms-badge ms-border ms-rounded ms-red"><i class="fas fa-exclamation"></i> Danger</span></code></pre></div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<a class="ms-badge-gh" href="#">
+					<span class="ms-dark-side">
+						GitHub
+					</span>
+					<span class="ms-color-side">
+						<i class="fas fa-code-branch"></i>
+					</span>
+				</a>
+
+				<a class="ms-badge-gh" href="#">
+					<span class="ms-dark-side">
+						NodeJS
+					</span>
+					<span class="ms-color-side ms-green">
+						<i class="fab fa-node-js"></i>
+					</span>
+				</a>
+
+				<a class="ms-badge-gh" href="#">
+					<span class="ms-dark-side">
+						minstyle.io
+					</span>
+					<span class="ms-color-side ms-gradient">
+						<i class="fas fa-heart"></i>
+					</span>
+				</a>
+
+				<a class="ms-badge-gh" href="#">
+					<span class="ms-dark-side">
+						HTML5
+					</span>
+					<span class="ms-color-side ms-red">
+						<i class="fab fa-html5"></i>
+					</span>
+				</a>
+
+				<a class="ms-badge-gh" href="#">
+					<span class="ms-dark-side">
+						CSS
+					</span>
+					<span class="ms-color-side ms-blue">
+						<i class="fab fa-css3-alt"></i>
+					</span>
+				</a>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><a class="ms-badge-gh" href="#">
+	<span class="ms-dark-side">
+		GitHub
+	</span>
+	<span class="ms-color-side">
+		<i class="fas fa-code-branch"></i>
+	</span>
+</a>
+
+<a class="ms-badge-gh" href="#">
+	<span class="ms-dark-side">
+		NodeJS
+	</span>
+	<span class="ms-color-side ms-green">
+		<i class="fab fa-node-js"></i>
+	</span>
+</a>
+
+<a class="ms-badge-gh" href="#">
+	<span class="ms-dark-side">
+		minstyle.io
+	</span>
+	<span class="ms-color-side ms-gradient">
+		<i class="fas fa-heart"></i>
+	</span>
+</a>
+
+<a class="ms-badge-gh" href="#">
+	<span class="ms-dark-side">
+		HTML5
+	</span>
+	<span class="ms-color-side ms-red">
+		<i class="fab fa-html5"></i>
+	</span>
+</a>
+
+<a class="ms-badge-gh" href="#">
+	<span class="ms-dark-side">
+		CSS
+	</span>
+	<span class="ms-color-side ms-blue">
+		<i class="fab fa-css3-alt"></i>
+	</span>
+</a></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
 				<h1>Test <span class="ms-badge-title">New</span></h1>
 				<h2>Test <span class="ms-badge-title ms-blue">New</span></h2>
 				<h3>Test <span class="ms-badge-title ms-white">New</span></h3>
