Update .html example files
Added viewport for mobile

--- a/examples/form.html
+++ b/examples/form.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Form - Exemple</title>
   <link rel="icon" href="img/favicon.ico" />
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 
   <link rel="stylesheet" href="../css/minstyle.io.css">
   <link rel="stylesheet" href="css/prism.css">
