--- a/examples/button.html
+++ b/examples/button.html
@@ -26,6 +26,7 @@
 			<div class="col-s-12">
 				<button class="ms-btn ms-blue">Button</button>
 				<button class="ms-btn ms-rounded ms-blue">Rounded</button>
+				<button class="ms-btn ms-rounded ms-yellow">Rounded</button>
 				<button class="ms-btn ms-border ms-blue">Border</button>
 				<button class="ms-btn ms-border-bottom ms-blue">Border Bottom</button>
 				<button class="ms-btn ms-clear ms-blue">Clear</button>
@@ -35,6 +36,7 @@
 				<pre>
 <code class="language-html"><button class="ms-btn ms-blue">Button</button>
 <button class="ms-btn ms-rounded ms-blue">Rounded</button>
+<button class="ms-btn ms-rounded ms-yellow">Rounded</button>
 <button class="ms-btn ms-border ms-blue">Border</button>
 <button class="ms-btn ms-border-bottom ms-blue">Border Bottom</button>
 <button class="ms-btn ms-clear ms-blue">Clear</button></code></pre>
