Blockquotes, buttons, Colors & alerts changes.
- Added blue dark color
- Added yellow alert
- Added yellow blockquote
- Changes examples pages

--- a/examples/blockquote.html
+++ b/examples/blockquote.html
@@ -68,6 +68,20 @@
 
 		<div class="row">
 			<div class="col-s-12">
+				<blockquote class="ms-blockquote ms-yellow">
+				  	<p><em>Lorem ipsum dolor sit amet, <a href="">consectetur</a> adipisicing elit. Facilis vel nobis ex, ullam incidunt, id esse quo! Odit nobis facilis animi, quia laudantium consequatur sint quam excepturi distinctio consequuntur. Vero.</em></p>
+				</blockquote>
+			</div>
+
+			<div class="col-s-12">
+				<pre><code class="language-html"><blockquote class="ms-blockquote ms-yellow">
+	<p><em>Lorem ipsum dolor sit amet, <a href="">consectetur</a> adipisicing elit. Facilis...</em></p>
+</blockquote></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
 				<blockquote class="ms-blockquote ms-green">
 				  	<p><em><code>
 					var fruits = ['Apple', 'Banana'];
