--- a/examples/content.html
+++ b/examples/content.html
@@ -84,7 +84,7 @@
 						<p class="ms-text-size-4 ms-text-blue">Text size</p>
 					</li>
 					<li>
-						<p class="ms-text-size-5">Text size</p>
+						<p class="ms-text-size-5 ms-text-yellow ">Text size</p>
 					</li>
 					<li>
 						<p class="ms-text-size-6">Text size</p>
@@ -107,7 +107,7 @@
 		<li><p class="ms-text-size-2 ms-text-red">Text size</p></li>
 		<li><p class="ms-text-size-3 ms-text-green">Text size</p></li>
 		<li><p class="ms-text-size-4 ms-text-blue">Text size</p></li>
-		<li><p class="ms-text-size-5">Text size</p></li>
+		<li><p class="ms-text-size-5 ms-text-yellow">Text size</p></li>
 		<li><p class="ms-text-size-6">Text size</p></li>
 		<li><p class="ms-text-size-7">Text size</p></li>
 		<li><p class="ms-text-size-8">Text size</p></li>
