--- a/examples/alert.html
+++ b/examples/alert.html
@@ -86,6 +86,23 @@
 			</div>
 		</div>
 
+		<!-- ALERT YELLOW -->
+		<div class="row">
+			<div class="col-s-12">
+				<div class="ms-alert ms-yellow ms-large">
+					<h4><b>Title</b>,</h4>
+					<b>Large alert</b>, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci ullam blanditiis necessitatibus, natus unde enim autem voluptas assumenda, accusamus doloremque dolor hic voluptatem <span class="colored">amet earum mollitia ex quia</span> dolorem impedit?
+				</div>
+			</div>
+
+			<div class="col-s-12">
+				<pre><code class="language-html"><div class="ms-alert ms-yellow ms-large">
+	<h4><b>Title</b>,</h4>
+	<b>Large alert</b>, Lorem ipsum dolor sit amet, consectetur adipisicing elit...
+</div></code></pre>
+			</div>
+		</div>
+
 		<!-- ALERT WHITE -->
 		<div class="row">
 			<div class="col-s-12">
