Reorganization of scss
- Remove size class for heading
- Remove color class for heading
- Rename Content in Typographie
- Move shadow class to Utility

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					<li><a href="examples/progressbar.html">Progress Bar</a></li>
 					<li><a href="examples/card.html">Card</a></li>
 					<li><a href="examples/menu.html">Menu</a></li>
-					<li><a href="examples/content.html">Content</a></li>
+					<li><a href="examples/typographie.html">Typographie</a></li>
 					<li><a href="examples/box.html">Box</a></li>
 				</ul>
 			</div>
