--- a/examples/typographie.html
+++ b/examples/typographie.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Content - Exemple</title>
+	<title>Typographie - Exemple</title>
 	<link rel="icon" href="img/favicon.ico" />
 	<meta name="viewport" content="width=device-width, user-scalable=no">
 
@@ -19,22 +19,8 @@
 
 	<div class="container">
 		<div class="row" style="margin-bottom: 20px;">
-			<h1><a href="../" class="btn"><i class="fas fa-chevron-circle-left"></i></a> Content - Example</h1>
+			<h1><a href="../" class="btn"><i class="fas fa-chevron-circle-left"></i></a> Typographie - Example</h1>
 		</div>
-
-		<div class="row">
-		<div class="col-s-12">
-			<div class="ms-alert ms-clear ms-shadow">
-				<b>Shadow box</b>, Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere modi molestias ipsum! Libero magni ullam quam aut repellendus nobis amet cumque odit ea asperiores dignissimos soluta sapiente, blanditiis, quaerat minus.
-			</div>
-		</div>
-
-		<div class="col-s-12">
-					<pre><code class="language-html"><div class="ms-alert ms-clear ms-shadow">
-	<b>Shadow box</b>, Lorem ipsum dolor sit amet, ...
-</div></code></pre>
-		</div>
-	</div>
 
 	<div class="row">
 		<div class="col-s-12">
