Added yellow badge
- Added yellow badge

--- a/examples/badge.html
+++ b/examples/badge.html
@@ -28,6 +28,7 @@
 				<span class="ms-badge ms-blue">beta</span>
 				<span class="ms-badge ms-green">release</span>
 				<span class="ms-badge ms-red">bug</span>
+				<span class="ms-badge ms-yellow">warning</span>
 				<span class="ms-badge ms-gradient">minstyle.io</span>
 				<span class="ms-badge ms-white">minstyle.io</span>
 			</div>
@@ -37,6 +38,7 @@
 <span class="ms-badge ms-blue">beta</span>
 <span class="ms-badge ms-green">release</span>
 <span class="ms-badge ms-red">bug</span>
+<span class="ms-badge ms-yellow">warning</span>
 <span class="ms-badge ms-gradient">minstyle.io</span>
 <span class="ms-badge ms-white">minstyle.io</span></code></pre>
 			</div>
