--- a/examples/button.html
+++ b/examples/button.html
@@ -79,7 +79,7 @@
 
 		<div class="row">
 			<div class="col-s-12">
-				<div class="col-l-5">
+				<div class="col-s-5">
 					<button class="ms-btn ms-rounded ms-gradient ms-large ms-block">Block Button</button>
 				</div>
 			</div>
