Changes on Badge & Table
- Added notification element in badge
- Added yellow color for table
- Refactor list example page

--- a/examples/badge.html
+++ b/examples/badge.html
@@ -169,6 +169,20 @@
 			</div>
 		</div>
 
+		<div class="row">
+			<div class="col-s-12">
+				<span class="ms-notification ms-green ms-small">23</span>
+				<span class="ms-notification ms-blue ms-large">2</span>
+				<span class="ms-notification ms-red">4</span>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><span class="ms-notification ms-green ms-small">23</span>
+<span class="ms-notification ms-blue ms-large">2</span>
+<span class="ms-notification ms-red">4</span></code></pre>
+			</div>
+		</div>
+
 	</div><!-- /container -->
 
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
