--- a/examples/list.html
+++ b/examples/list.html
@@ -42,52 +42,34 @@
 
 		<div class="row">
 			<div class="col-s-12">
-				<ol class="ms-list ms-list-none">
+				<ul class="ms-list ms-list-none">
 				  <li>Lorem ipsum sit amet !</li>
 				  <li>Lorem dolor amet !</li>
 				  <li>Lorem ipsum dolor sit amet !</li>
-				</ol>
-			</div>
-
-			<div class="col-s-12">
-					<pre><code class="language-html"><ol class="ms-list ms-list-none">
-	<li>Lorem ipsum sit amet !</li>
-	<li>Lorem dolor amet !</li>
-	<li>Lorem ipsum dolor sit amet !</li>
-</ol></code></pre>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-s-12">
-				<ol class="ms-list ms-border">
-				  <li>Lorem ipsum sit amet !</li>
-				  <li>Lorem dolor amet !</li>
-				  <li>Lorem ipsum dolor sit amet !</li>
-				</ol>
-			</div>
-
-			<div class="col-s-12">
-					<pre><code class="language-html"><ol class="ms-list ms-border">
-	<li>Lorem ipsum sit amet !</li>
-	<li>Lorem dolor amet !</li>
-	<li>Lorem ipsum dolor sit amet !</li>
-</ol></code></pre>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-s-12">
-				<ul class="ms-list ms-boxed">
-					<li>Lorem ipsum dolor sit amet</li>
-					<li>Lorem dolor amet !</li>
-					<li>Lorem ipsum dolor sit amet !</li>
 				</ul>
 			</div>
 
 			<div class="col-s-12">
-					<pre><code class="language-html"><ul class="ms-list ms-boxed">
-	<li>Lorem ipsum dolor sit amet</li>
+					<pre><code class="language-html"><ul class="ms-list ms-list-none">
+	<li>Lorem ipsum sit amet !</li>
+	<li>Lorem dolor amet !</li>
+	<li>Lorem ipsum dolor sit amet !</li>
+</ul></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<ul class="ms-list ms-border">
+				  <li>Lorem ipsum sit amet !</li>
+				  <li>Lorem dolor amet !</li>
+				  <li>Lorem ipsum dolor sit amet !</li>
+				</ul>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><ul class="ms-list ms-border">
+	<li>Lorem ipsum sit amet !</li>
 	<li>Lorem dolor amet !</li>
 	<li>Lorem ipsum dolor sit amet !</li>
 </ul></code></pre>
@@ -109,6 +91,26 @@
 	<li>Lorem dolor amet !</li>
 	<li>Lorem ipsum dolor sit amet !</li>
 </ul></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<ul class="ms-list ms-boxed">
+					<li>Lorem ipsum dolor sit amet <span style="float: right"><span class="ms-notification ms-small ms-blue">2</span>
+</span></li>
+					<li>Lorem dolor amet ! <span style="float: right"><span class="ms-notification ms-small ms-red">2</span>
+</span></li>
+					<li>Lorem dolor amet ! <span style="float: right"><span class="ms-notification ms-small ms-yellow">2</span>
+</span></li>
+				</ul>
+			</div>
+
+			<div class="col-s-12">
+					<pre><code class="language-html"><ul class="ms-list ms-boxed">
+<li>Lorem ipsum dolor sit amet <span style="float: right"><span class="ms-notification ms-small ms-blue">2</span></span></li>
+<li>Lorem dolor amet ! <span style="float: right"><span class="ms-notification ms-small ms-red">2</span></span></li>
+<li>Lorem dolor amet ! <span style="float: right"><span class="ms-notification ms-small ms-yellow">2</span></span></li></ul></code></pre>
 			</div>
 		</div>
 
