Added yellow color for inputs
- Added yellow color for inputs

--- a/examples/form.html
+++ b/examples/form.html
@@ -58,7 +58,7 @@
             
             <div class="col-s-12 col-m-6">
               <label for="number">Number</label>
-              <input type="number" placeholder="Number" id="number">
+              <input type="number" placeholder="Number" id="number" class="ms-yellow">
             </div>
             
             <div class="col-s-12 col-m-6">
