--- a/examples/progressbar.html
+++ b/examples/progressbar.html
@@ -53,6 +53,20 @@
 		<div class="row">
 			<div class="col-s-12">
 				<div class="ms-progress">
+					<div class="ms-progress-fill ms-yellow" style="width: 23%;">23%</div>
+				</div>
+			</div>
+
+			<div class="col-s-12">
+				<pre><code class="language-html"><div class="ms-progress">
+	<div class="ms-progress-fill ms-yellow" style="width: 23%;">23%</div>
+</div></code></pre>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-s-12">
+				<div class="ms-progress">
 					<div class="ms-progress-fill ms-green ms-rounded" style="width: 88%;">88%</div>
 				</div>
 			</div>
