--- a/examples/menu.html
+++ b/examples/menu.html
@@ -26,7 +26,7 @@
 			<div class="col-s-12">
 				<div class="ms-menu">
 					<nav>
-						<li><a href="#" class="ms-active"><i class="fas fa-home"></i> Home</a></li>
+						<li><a href="#"><i class="fas fa-home"></i> Home</a></li>
 						<li><a href="#">Doc</a></li>
 						<li><a href="#">Blog</a></li>
 						<li><a href="#">Live</a></li>
@@ -37,84 +37,6 @@
 
 			<div class="col-s-12">
 				<pre><code class="language-html"><div class="ms-menu">
-	<nav>
-		<li><a href="#" class="ms-active"><i class="fas fa-home"></i> Home</a></li>
-		<li><a href="#">Doc</a></li>
-		<li><a href="#">Blog</a></li>
-		<li><a href="#">Live</a></li>
-		<li><a href="#">Contact</a></li>
-	</nav>
-</div></code></pre>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-s-12">
-				<div class="ms-menu ms-blue">
-					<nav>
-						<li><a href="#" class="ms-active"><i class="fas fa-home"></i> Home</a></li>
-						<li><a href="#">Doc</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Live</a></li>
-						<li><a href="#">Contact</a></li>
-					</nav>
-				</div>
-			</div>
-
-			<div class="col-s-12">
-				<pre><code class="language-html"><div class="ms-menu ms-blue">
-	<nav>
-		<li><a href="#" class="ms-active"><i class="fas fa-home"></i> Home</a></li>
-		<li><a href="#">Doc</a></li>
-		<li><a href="#">Blog</a></li>
-		<li><a href="#">Live</a></li>
-		<li><a href="#">Contact</a></li>
-	</nav>
-</div></code></pre>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-s-12">
-				<div class="ms-menu ms-green">
-					<nav>
-						<li><a href="#" class="ms-active"><i class="fas fa-home"></i> Home</a></li>
-						<li><a href="#">Doc</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Live</a></li>
-						<li><a href="#">Contact</a></li>
-					</nav>
-				</div>
-			</div>
-
-			<div class="col-s-12">
-				<pre><code class="language-html"><div class="ms-menu ms-green">
-	<nav>
-		<li><a href="#" class="ms-active"><i class="fas fa-home"></i> Home</a></li>
-		<li><a href="#">Doc</a></li>
-		<li><a href="#">Blog</a></li>
-		<li><a href="#">Live</a></li>
-		<li><a href="#">Contact</a></li>
-	</nav>
-</div></code></pre>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-s-12">
-				<div class="ms-menu ms-red">
-					<nav>
-						<li><a href="#" class="ms-active"><i class="fas fa-home"></i> Home</a></li>
-						<li><a href="#">Doc</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Live</a></li>
-						<li><a href="#">Contact</a></li>
-					</nav>
-				</div>
-			</div>
-
-			<div class="col-s-12">
-				<pre><code class="language-html"><div class="ms-menu ms-red">
 	<nav>
 		<li><a href="#" class="ms-active"><i class="fas fa-home"></i> Home</a></li>
 		<li><a href="#">Doc</a></li>
