--- a/examples/box.html
+++ b/examples/box.html
@@ -27,38 +27,6 @@
 				<div class="ms-box">
 					<div class="ms-content">
 						<div class="ms-title">
-							<h3 class="ms-text-center">This is a box !</h3>
-						</div>
-						<div class="ms-text">
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt architecto suscipit dignissimos dolorum, omnis inventore enim ex a minus veritatis reiciendis facilis recusandae, quisquam, accusantium temporibus cum nemo nulla. Id.
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-
-			<div class="col-s-12">
-					<pre><code class="language-html"><div class="ms-box">
-	<div class="ms-content">
-		<div class="ms-title">
-			<h3 class="ms-text-center">This is a box !</h3>
-		</div>
-		<div class="ms-text">
-			<p>
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit...
-			</p>
-		</div>
-	</div>
-</div></code></pre>
-			</div>
-		</div>
-
-		<div class="row">
-			<div class="col-s-12">
-				<div class="ms-box ms-boxed">
-					<div class="ms-content">
-						<div class="ms-title">
 							<h3>This is a box !</h3>
 						</div>
 						<div class="ms-text">
@@ -71,7 +39,7 @@
 			</div>
 
 			<div class="col-s-12">
-					<pre><code class="language-html"><div class="ms-box ms-boxed">
+					<pre><code class="language-html"><div class="ms-box">
 	<div class="ms-content">
 		<div class="ms-title">
 			<h3>This is a box !</h3>
@@ -88,7 +56,7 @@
 
 		<div class="row">
 			<div class="col-s-12">
-				<div class="ms-box ms-boxed">
+				<div class="ms-box">
 					<div class="ms-header">
 						<h2 class="ms-text-size-1"><span class="ms-fw-800">Header</span> - Lorem ipsum dolor sit amet</h2>
 					</div>
@@ -106,7 +74,7 @@
 			</div>
 
 			<div class="col-s-12">
-					<pre><code class="language-html"><div class="ms-box ms-boxed">
+					<pre><code class="language-html"><div class="ms-box">
 	<div class="ms-header">
 		<h2 class="ms-text-size-1"><span class="ms-fw-800">Header</span> - Lorem ipsum dolor sit amet</h2>
 	</div>
