Change version + Tchat theme
- Change version
- Tchat theme

--- a/examples/Tchat/index.html
+++ b/examples/Tchat/index.html
@@ -20,7 +20,7 @@
 	<header>
 		<div class="ms-menu" style="margin: 0;">
 			<nav>
-				<li><a href="#">[COMPAGNY LOGO]</a></li>
+				<li style="position: relative; top: -15px;"><a href="#"><i class="fab fa-pied-piper-pp fa-3x" style="color: #fff;"></i></a></li>
 				<li><a href="#">Home</a></li>
 				<li><a href="#">PP Tchat</a></li>
 				<li><a href="#">Files</a></li>
@@ -46,7 +46,7 @@
 				</div>
 
 				<div class="col-s-2">
-					<button class="ms-btn ms-blue ms-block">
+					<button class="ms-btn ms-green ms-block">
 						<i class="fas fa-plus" style="color: #fff;"></i>
 					</button>
 				</div>
@@ -68,13 +68,13 @@
 
 			<!-- Title -->
 			<div class="bloc message col-s-12">
-				<i class="far fa-comment"></i> Tchat
+				<i class="far fa-comment"></i> Tchat room
 			</div>
 
 			<!-- Message bloc -->
 			<div class="bloc message col-s-12" style="margin-top: 8px;">
 				<blockquote class="ms-blockquote ms-blue">
-					<em><b>Dinesh : </b>Can I commit my improvement on the compression module?</em>
+					<em><b>Dinesh : </b>Can I commit my improvement on the middle compression module?</em>
 				</blockquote>
 
 				<blockquote class="ms-blockquote ms-green">
@@ -82,7 +82,7 @@
 				</blockquote>
 
 				<blockquote class="ms-blockquote ms-red">
-					<em><b>Big Head : </b> Where's my game boy?</em>
+					<em><b>Big Head : </b> Humm... what do you talking about ?</em>
 				</blockquote>
 
 				<i class="fas fa-ellipsis-h"></i> Dinesh typing...
@@ -109,11 +109,11 @@
 			<!-- Reply bloc -->
 			<div class="bloc col-s-12" style="margin-top: 8px;">
 				<div class="col-s-12">
-					<label for="Message"><i class="far fa-comment"></i> Message</label>
+					<label for="Message"><i class="far fa-comment"></i> Write message</label>
 					<textarea placeholder="My message..." id="Message">Hi team... :)</textarea>
 				</div>
 
-				<button class="ms-btn ms-border ms-blue">Sending...</button>
+				<button class="ms-btn ms-border ms-green">Sending...</button>
 
 				<div class="ms-progress">
 					<div class="ms-progress-fill ms-green" style="width: 76%;">76%</div>
