Button, Notification, Text color
- Change font size
- Change button size
- Added text color

--- a/test/test.html
+++ b/test/test.html
@@ -226,7 +226,8 @@
 		<div style="width: 40%">
 			<div class="ms-form-group">
 				<label for="Email"><i class="far fa-envelope-open"></i> Email</label>
-				<input type="email" class="ms-danger" id="Email" disabled>	
+				<input type="email" class="ms-danger" id="Email">
+				<span class="ms-under-input ms-text-danger">The email is invalid.</span>
 			</div>
 		</div>
 		
@@ -283,6 +284,20 @@
 			<div class="ms-form-group">
 				<label for="Login">Login</label>
 				<input type="text" placeholder="large..." id="Login" class="ms-large">	
+			</div>
+		</div>
+
+		<div style="width: 40%">
+			<div class="ms-form-group">
+				<label for="Number">Number</label>
+				<input type="number" placeholder="number" id="Number">	
+			</div>
+		</div>
+
+		<div style="width: 40%">
+			<div class="ms-form-group">
+				<label for="File">Number</label>
+				<input type="file" id="File">	
 			</div>
 		</div>
 	</div>
