--- a/test/test.html
+++ b/test/test.html
@@ -265,7 +265,7 @@
 				</select>
 			</div>
 		</div>
-
+		
 		<div style="width: 40%">
 			<div class="ms-form-group">
 				<label for="select">Select</label>
@@ -294,35 +294,35 @@
 				<input type="text" placeholder="small..." id="Login" class="ms-small">	
 			</div>
 		</div>
-
+		
 		<div style="width: 40%">
 			<div class="ms-form-group">
 				<label for="Login">Login</label>
 				<input type="text" placeholder="medium..." id="Login" class="ms-medium">	
 			</div>
 		</div>
-
+		
 		<div style="width: 40%">
 			<div class="ms-form-group">
 				<label for="Login">Login</label>
 				<input type="text" placeholder="large..." id="Login" class="ms-large">	
 			</div>
 		</div>
-
+		
 		<div style="width: 40%">
 			<div class="ms-form-group">
 				<label for="Number">Number</label>
 				<input type="number" placeholder="number" id="Number">	
 			</div>
 		</div>
-
+		
 		<div style="width: 40%">
 			<div class="ms-form-group">
 				<label for="File">Number</label>
 				<input type="file" id="File">	
 			</div>
 		</div>
-
+		
 		<div style="width: 40%">
 			<div class="ms-form-group">
 				<label for="Text">Number</label>
@@ -336,29 +336,41 @@
 				<input type="text" placeholder="disabled..." id="Text" class="ms-disabled">	
 			</div>
 		</div>
-
+		
 		<!-- ################################ SPACER ################################-->
 		<div class="spacer">
 			<h2>Typographie</h2>
 		</div>
-
+		
 		<p>
 			Lorem ipsum dolor sit amet <span class="ms-text-info">ms-text-info</span> elit. Quibusdam aut vero eum, <span class="ms-text-success">ms-text-success</span> spa alias <span class="ms-text-black" style="background-color: gray">ms-text-black</span> accusamus <span class="ms-text-danger">ms-text-danger</span> officiis eligendi totam <span class="ms-text-white" style="background-color: black">ms-text-white</span>ipsa ratione deserunt <span class="ms-text-warning">ms-text-warning</span>, sit itaque numquam similique, cupiditate vitae <span class="ms-text-gray">ms-text-gray</span>.
 		</p><br>
-
+		
 		<p class="ms-text-left">Lorem ipsum dolor - ms-text-left</p><br>
 		<p class="ms-text-center">Lorem ipsum dolor - ms-text-center</p><br>
 		<p class="ms-text-right">Lorem ipsum dolor - ms-text-right</p><br>
-
+		
 		<h1>Title (35px)</h1><br>
 		<h2>Title (32px)</h2><br>
 		<h3>Title (29px)</h3><br>
 		<h4>Title (26px)</h4><br>
 		<h5>Title (22px)</h5><br>
-		<h6>Title (19px)</h6><br>
-
+		<h6>Title (19px)</h6><br><br/>
+		
 		<p>
 			Lorem <mark>ipsum dolor</mark> sit amet <mark class="ms-info">mark ms-blue</mark>, impedit <mark class="ms-success">mark ms-success</mark> architecto <mark class="ms-danger">mark ms-danger</mark> incidunt ipsam obcaecati sunt delectus cupiditate, corporis debitis! Illo, amet impedit?
+		</p><br/>
+		
+		<p>
+			Use <code>code</code> for add something.
+		</p><br/>
+		
+		<p>
+			<terminal>terminal</terminal> <terminal>ls -l --color</terminal> <span class="ms-terminal">Ctrl + V</span>
+		</p><br/>
+		
+		<p>
+			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi recusandae sit, repellat quis nihil perspiciatis architecto est cum debitis ullam iusto, esse blanditiis neque libero, saepe adipisci beatae. Quisquam, ullam.
 		</p>
 	</div>
 	
