Clean up, Label, Rename Typography
- Clean up
- Added new label style

--- a/test/test.html
+++ b/test/test.html
@@ -339,7 +339,7 @@
 		
 		<!-- ################################ SPACER ################################-->
 		<div class="spacer">
-			<h2>Typographie</h2>
+			<h2>Typography</h2>
 		</div>
 		
 		<p>
@@ -359,19 +359,38 @@
 		
 		<p>
 			Lorem <mark>ipsum dolor</mark> sit amet <mark class="ms-info">mark ms-blue</mark>, impedit <mark class="ms-success">mark ms-success</mark> architecto <mark class="ms-danger">mark ms-danger</mark> incidunt ipsam obcaecati sunt delectus cupiditate, corporis debitis! Illo, amet impedit?
-		</p><br/>
+		</p>
 		
 		<p>
 			Use <code>code</code> for add something.
-		</p><br/>
+		</p>
 		
 		<p>
 			<terminal>terminal</terminal> <terminal>ls -l --color</terminal> <span class="ms-terminal">Ctrl + V</span>
-		</p><br/>
+		</p>
 		
 		<p>
 			Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi recusandae sit, repellat quis nihil perspiciatis architecto est cum debitis ullam iusto, esse blanditiis neque libero, saepe adipisci beatae. Quisquam, ullam.
 		</p>
+		
+		<!-- ################################ SPACER ################################-->
+		<div class="spacer">
+			<h2>Label</h2>
+		</div>
+
+		<span class="ms-label">label</span>
+		<span class="ms-label ms-info">label</span>
+		<span class="ms-label ms-success">label</span>
+		<span class="ms-label ms-danger">label</span>
+		<span class="ms-label ms-warning">label</span><br/><br/><br/>
+
+		<span class="ms-label ms-small">label</span>
+		<span class="ms-label ms-info">label</span>
+		<span class="ms-label ms-success ms-medium">label</span>
+		<span class="ms-label ms-danger ms-large">label</span><br/><br/><br/>
+
+		<span class="ms-label ms-success ms-rounded">Rounded label</span>
+
 	</div>
 	
 </body>
