--- a/test/test.html
+++ b/test/test.html
@@ -385,11 +385,11 @@
 		<span class="ms-label ms-warning">label</span><br/><br/><br/>
 
 		<span class="ms-label ms-small">label</span>
-		<span class="ms-label ms-info">label</span>
-		<span class="ms-label ms-success ms-medium">label</span>
-		<span class="ms-label ms-danger ms-large">label</span><br/><br/><br/>
+		<span class="ms-label">label</span>
+		<span class="ms-label ms-medium">label</span>
+		<span class="ms-label ms-large">label</span><br/><br/><br/>
 
-		<span class="ms-label ms-success ms-rounded">Rounded label</span>
+		<span class="ms-label ms-success ms-rounded">Rounded label</span><br/><br/>
 
 	</div>
 	
