--- a/test/test.html
+++ b/test/test.html
@@ -108,53 +108,53 @@
 		</div>
 		
 		<div style="width: 666px">
-			<div class="ms-notification">
+			<div class="ms-alert">
 				<span class="ms-close"></span>
 				<i class="fas fa-info-circle"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-medium">
+			<div class="ms-alert ms-medium">
 				<span class="ms-close"></span>
 				<i class="fas fa-info-circle"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-large">
+			<div class="ms-alert ms-large">
 				<span class="ms-close"></span>
 				<i class="fas fa-info-circle"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-info">
+			<div class="ms-alert ms-info">
 				<span class="ms-close"></span>
 				<i class="fas fa-question-circle"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-danger">
+			<div class="ms-alert ms-danger">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-success">
+			<div class="ms-alert ms-success">
 				<i class="fas fa-check-circle"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-warning">
+			<div class="ms-alert ms-warning">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-outline-info">
+			<div class="ms-alert ms-outline-info">
 				Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-outline-danger">
+			<div class="ms-alert ms-outline-danger">
 				<span class="ms-close"></span>
 				<i class="fas fa-exclamation-circle"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-outline-success">
+			<div class="ms-alert ms-outline-success">
 				<span class="ms-close"></span>
 				Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 			
-			<div class="ms-notification ms-outline-warning">
+			<div class="ms-alert ms-outline-warning">
 				<i class="fas fa-exclamation-triangle"></i> Lorem ipsum dolor sit amet consectetur adipisicing elit...
 			</div><br/>
 		</div>
