--- a/test/test.html
+++ b/test/test.html
@@ -396,7 +396,7 @@
 			<h2>Table</h2>
 		</div>
 		
-		<table class="ms-table" style="width: 70%; margin: 0 auto;">
+		<table style="width: 70%; margin: 0 auto;">
 			<thead>
 				<tr>
 					<th>Rank</th>
@@ -454,7 +454,7 @@
 			</tbody>
 		</table><br/><br/>
 		
-		<table class="ms-table ms-boxed" style="width: 70%; margin: 0 auto;">
+		<table class="ms-table ms-bordered" style="width: 70%; margin: 0 auto;">
 			<thead>
 				<tr>
 					<th>Rank</th>
