Refactor, Grid CSS
- Refactor alert
- Added toast grid CSS

--- a/test/test.html
+++ b/test/test.html
@@ -24,6 +24,19 @@
 <body>
 	
 	<div style="width: 1200px; margin: 20px auto">
+		<div class="container">
+		    <div class="row">
+		        <div class="col-3" style="background-color:#364149;">
+		            XXX
+		        </div>
+		        <div class="col-3" style="background-color:#364149;">
+		            XXX
+		        </div>
+		        <div class="col-6" style="background-color:#364149;">
+		            XXX
+		        </div>
+		    </div>
+		</div>
 		<!-- ################################ SPACER ################################-->
 		<div class="spacer">
 			<h2>Button</h2>
@@ -360,6 +373,8 @@
 		<p>
 			Lorem <mark>ipsum dolor</mark> sit amet <mark class="ms-info">mark ms-blue</mark>, impedit <mark class="ms-success">mark ms-success</mark> architecto <mark class="ms-danger">mark ms-danger</mark> incidunt ipsam obcaecati sunt delectus cupiditate, corporis debitis! Illo, amet impedit?
 		</p>
+
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur mollitia, rem neque aperiam facere quasi reiciendis odit assumenda tempore eligendi impedit atque maiores iure eum quia doloribus ipsum odio quae!
 		
 		<p>
 			Use <code>code</code> for add something.
