--- a/test/test.html
+++ b/test/test.html
@@ -497,6 +497,41 @@
 				</tr>
 			</tbody>
 		</table><br/><br/>
+
+		<!-- ################################ LIST ################################-->
+		<div class="spacer">
+			<h2>Table</h2>
+		</div>
+
+		<ul>
+		  <li>list item 1</li>
+		  <li>list item 2
+		    <ul>
+		      <li>list item 2.1</li>
+		      <li>list item 2.2</li>
+		      <li>list item 2.3</li>
+		    </ul>
+		  </li>
+		  <li>list item 3</li>
+		</ul>
+
+		<ol>
+		    <li>list item 1</li>
+		    <li>list item 2
+		        <ol>
+		            <li>list item 2.1</li>
+		            <li>list item 2.2</li>
+		            <li>list item 2.3</li>
+		        </ol>
+		    </li>
+		    <li>list item 3</li>
+		</ol>
+
+		<!-- description list -->
+		<dl>
+		  <dt>description list term</dt>
+		  <dd>description list description</dd>
+		</dl>
 		
 	</div>
 	
