--- a/test/test.html
+++ b/test/test.html
@@ -532,6 +532,41 @@
 		  <dt>description list term</dt>
 		  <dd>description list description</dd>
 		</dl>
+
+		<!-- ################################ BLOCKQUOTE ################################-->
+		<div class="spacer">
+			<h2>Blockquote</h2>
+		</div>
+
+		<blockquote class="ms-blockquote">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+			<i>Jhon Doe</i>
+		</blockquote>
+
+		<blockquote class="ms-blockquote ms-center">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+			<i>Jhon Doe</i>
+		</blockquote>
+
+		<blockquote class="ms-info">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+			<i>Jhon Doe</i>
+		</blockquote>
+
+		<blockquote class="ms-success">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+			<i>Jhon Doe</i>
+		</blockquote>
+
+		<blockquote class="ms-error">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+			<i>Jhon Doe</i>
+		</blockquote>
+
+		<blockquote class="ms-warning">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+			<i>Jhon Doe</i>
+		</blockquote>
 		
 	</div>
 	
