--- a/test/test.html
+++ b/test/test.html
@@ -567,6 +567,20 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
 			<i>Jhon Doe</i>
 		</blockquote>
+
+		<!-- ################################ BLOCKQUOTE ################################-->
+		<div class="spacer">
+			<h2>Avatars</h2>
+		</div>
+
+		<div class="ms-avatar ms-small" data-initial="RM" style="display:inline-block;">
+		    <img class="ms-avatar-img" src="https://randomuser.me/api/portraits/women/60.jpg" alt="...">
+		</div>
+		
+		<div class="ms-avatar ms-small" style="display:inline-block;">
+		    <span class="ms-text">RM</span>
+		</div>
+
 		
 	</div>
 	
